<resources>
    <string name="app_name">Picking App</string>
    <string name="get_profile">Get profile</string>
    <string name="check_expired">Check if token expired</string>
    <string name="sign_out_okta">Log out</string>
    <string name="clear_data">Clear data</string>
    <string name="manage_tokens">Manage tokens</string>
    <string name="invalid_session">Invalid Session</string>
    <string name="dismiss">Dismiss</string>
    <string name="refresh_token">Refresh Token</string>
    <string name="revoke_token">Revoke Token</string>
    <string name="introspect_token">Introspect token</string>
    <string name="display_token">Display token</string>
    <string name="select_token">Select a token type</string>
    <string name="success">Success</string>
    <string name="error">Error check logs</string>
    <string name="loading">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="data_cleared">Data cleared</string>
    <string name="sign_in">Sign In</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_hint">Email Address</string>
    <string name="token_expired">Token expired:</string>
    <string name="invalid_input">Missing username or password</string>
    <string name="unknown">Unknown error. Check the logs for trace</string>
    <string name="authorized">Sign-in authorized</string>
    <string name="operation_cancelled">Operation cancelled</string>
    <string name="sign_out_success">Signed out of browser session</string>
    <string name="prompt_username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="pick_select">Pick Select</string>
    <string name="pick_assignment">Pick Assignment</string>
    <string name="staging">Staging</string>
    <string name="dashboard">Dashboard</string>
    <string name="product_id_label_string">Product Number</string>
    <string name="product_quantity_label_string">QTY</string>
    <string name="slash_character">/</string>
    <string name="done">Done</string>
    <string name="confirm_pick_card">CONFIRM</string>
    <string name="split_quantity">SPLIT QUANTITY</string>
    <string name="split_qty_action">SPLIT</string>
    <string name="morsco_logo_description">Morsco Logo</string>
    <string name="settings">Settings</string>
    <string name="ship_via_title">Ship via:</string>
    <string name="customer_label_text">Customer:</string>
    <string name="order_number_label_text">Order Number:</string>
    <string name="order_query_hint">Ship Via / Order # / Customer</string>
    <string name="current_branch_text">Current Branch</string>
    <string name="confirm_order_message">Are you ready to start this order?</string>
    <string name="order_dialog_info">%1$s&lt;p /&gt;<![CDATA[<b>Order Number:</b>]]> %2$s</string>
    <string name="confirm">Confirm</string>
    <string name="eclipse_login_title">Eclipse Login</string>
    <string name="eclipse_username_hint">Username</string>
    <string name="eclipse_password_hint">Password</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="zero_products_found">Zero products found</string>
    <string name="select_order">Select Order</string>
    <string name="branch_entry_title">Branch ID</string>
    <string name="branch_entry_content">Please enter your Branch ID.</string>
    <string name="branch_id">Branch ID</string>
    <string name="branch_id_semi">Branch ID:</string>
    <string name="branch_title">Branch %s</string>
    <string name="branch_missing_error">Branch Id is a minimum of %s digits</string>
    <string name="user_name_missing_error">Username is a minimum of %s digits</string>
    <string name="password_missing_error">Password is a minimum of %s digits</string>
    <string name="customer_name">Customer: %s</string>
    <string name="customer_name_spannable"><![CDATA[<b>Customer:</b>]]> %s</string>
    <string name="order_number">Order number: %s</string>
    <string name="order_number_spannable"><![CDATA[<b>Order number:</b>]]> %s</string>
    <string name="select_product">Pick Items</string>
    <string name="pick_item_card_location">Location: %s</string>
    <string name="pick_item_card_product">Product:</string>
    <string name="pick_item_card_product_number">PN: %s</string>
    <string name="complete">Complete</string>
    <string name="stage_order_description">Please select complete to stage the order</string>
    <string name="serial_entry_hint">Serial Number (%s)</string>
    <string name="ready_to_start">Start</string>
    <string name="serial_num_valid">Valid Serial Number</string>
    <string name="serial_num_max_reached">You already have the max Quantity of Serial #s</string>
    <string name="serial_num_incorrect_quantity">Incorrect Quantity of Serial #s</string>
    <string name="serial_num_qty_reset">Qty Reset</string>
    <string name="serial_num_reset">Serial Numbers Reset</string>
    <string name="duplicate_serial_message">You’ve already scanned this Serial Number. Please scan a different item.</string>
    <string name="empty_string"></string>
    <string name="order_stage_success"><![CDATA[<b>Success:</b>]]> Order Completed!</string>
    <string name="product_list_error"><![CDATA[<b>Error:</b>]]> Return to the order screen and re-open this order.</string>
    <string name="error_fetch_product">Error fetching products</string>
    <string name="error_serial_unique"><![CDATA[<b>Error submitting Serial Number</b>]]>. Please verify you are using unique values.</string>
    <string name="error_submit_pick">Error Submitting Pick</string>
    <string name="error_picking_task">Error staging Picking tasks</string>
    <string name="error_400"><![CDATA[<b>400 Error:</b>]]> We are having trouble communicating with Eclipse. Please contact the help desk.</string>
    <string name="error_submit_serial">Error submitting product serial numbers</string>
    <string name="error_fetch_order">Error fetching orders</string>
    <string name="error_basic">Error</string>
    <string name="valid_product_id">Valid Product Number</string>
    <string name="invalid_product_id">Invalid Product Number. Please scan again or enter manually.</string>
    <string name="invalid_quantity">Invalid Quantity</string>
    <string name="exceed_quantity">Excess Quantity</string>
    <string name="serial_number_blank">Serial number required</string>
    <string name="alternate_location_blank">Location Required</string>
    <string name="authorization_expired">Authorization expired. Please log in again.</string>
    <string name="authorization_not_completed">Please enter your Eclipse credentials</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="product_image_description">Product Image</string>
    <string name="delete_button_description">delete button</string>
    <string name="snack_bar_title_success">Success</string>
    <string name="snack_bar_title_error">Error</string>
    <string name="snack_bar_title_message">Message</string>
    <string name="snack_bar_title_warning">Warning</string>
    <string name="alert_icon_description">alert icon</string>
    <string name="location">Location</string>
    <string name="stage_location">Staging Location</string>
    <string name="packaging">Packaging</string>
    <string name="boxes">Boxes</string>
    <string name="skids">Skids</string>
    <string name="bundles">Bundles</string>
    <string name="pieces">Pieces</string>
    <string name="blank_field_error">Field cannot be blank.</string>
    <string name="staging_location_hint">Staging Location *</string>
    <string name="force_completion_staging">You must complete staging this order before moving on.</string>
    <string name="desc">desc</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="split_quantity_title">SPLIT QUANTITY</string>
    <string name="please_enter_the_quantity_you_picked">Please enter the quantity you picked</string>
    <string name="confirm_split">CONFIRM SPLIT</string>
    <string name="split_qty_validation_error">Quantity must be less than required amount.</string>
    <string name="split_qty_serial_validation_error">Quantity does not match the number of serial numbers scanned. Please try again.</string>
    <string name="split_qnty_success_alternate_location_added_message">Split Quantity: Alternate location added. Proceed with pick order.</string>
    <string name="split_qnty_success_back_ordered_message">Back Order: Item has been back ordered. Proceed with pick order</string>
    <string name="split_qnty_insufficient">Insufficient QTY back order needed</string>
    <string-array name="tokens">
        <item>Access token</item>
        <item>Refresh token</item>
        <item>ID token</item>
    </string-array>
    <string name="staging_order_warning"><![CDATA[<b>Warning:</b>]]> Don’t leave the staging screen. If staging is timed out order will be lost.</string>
    <string name="menu_profile">Profile</string>
    <string name="app_version">Version: %1s</string>
    <string name="order_lock_message">Order is locked. Someone may be editing this order in Eclipse.</string>
    <string name="login">LOGIN</string>
    <string name="new_user">New user? Login here</string>
    <string name="reece_picking_app">Reece Picking App</string>
    <string name="email">Email</string>
    <string name="email_message">Please enter your company email address.</string>
    <string name="step">Step</string>
    <string name="eclipse_login_message">Please enter your Eclipse username and password. If you are unsure, please contact your Branch Manager.</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="refresh_screen_message">Refresh this screen if you are waiting\nfor an order.</string>
    <string name="pick_products">Pick Products</string>
    <string name="warning_message"><b>Warning</b>: Don’t quit the staging screen. If staging is timed out order will be lost. </string>
    <string name="stage_order">Stage Order</string>
    <string name="shipping_instruction">Shipping Instructions:</string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="error_log">Error Log</string>
    <string name="auto_fill">Autofill</string>
    <string name="pick_from_other_locations">Pick from other locations</string>
    <string name="back_order">Back order</string>
    <string name="postpone_pick">Postpone Pick</string>
    <string name="error_invalid_branch">Invalid Branch ID</string>
    <string name="error_validating_branch_id">Error validating branch ID</string>
    <string name="report">Report</string>
    <string name="report_message">These items need to be updated in ERP by a manager.</string>
    <string name="order_date">ORDER DATE</string>
    <string name="order_number_lbl">ORDER NUMBER</string>
    <string name="customer">Customer</string>
    <string name="label_qty_picked">QTY Picked:</string>
    <string name="enter_the_l">A back order will not be created but we will add that one is needed to the report.</string>
    <string name="what_was_th">Add a back order for this product to the report?</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="tittle_fragment_backorder">Pick from other locations</string>
    <string name="label_qty_picked_value">%1s / %2s </string>
    <string name="label_qty_picked_label_and_value">QTY Picked: %1s / %2s </string>
    <string name="snackbar_success_suc"><![CDATA[<b>Report Created</b>]]>: Back order needed.</string>
    <string name="snackbar_temp_error"><![CDATA[<b>Split quantity</b>]]>: Serial Products currently not supported</string>
    <string name="snackbar_success_split_qty"><![CDATA[<b>Report Created</b>]]>: Product picked from multiple locations.</string>
</resources>