<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:paddingBottom="@dimen/bottom_sheet_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_centerHorizontal="true"
            android:id="@+id/divider"
            style="@style/ViewHandleBar"
            android:layout_marginTop="@dimen/bottom_sheet_dialog_handle_bar_margin_top"
            android:layout_marginBottom="@dimen/bottom_sheet_dialog_handle_bar_margin_bottom"
            android:background="@color/handlebar_gray" />

        <Button
            android:id="@+id/pick_from_other_locations_button"
            style="@style/ReeceButtonBottomSheetDialog"
            android:layout_below="@id/divider"
            android:layout_marginHorizontal="@dimen/bottom_sheet_dialog_button_margin_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_from_other_locations" />

        <Button
            android:id="@+id/back_order_button"
            style="@style/ReeceButtonBottomSheetDialog"
            android:layout_below="@id/pick_from_other_locations_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_order" />

        <Button
            android:id="@+id/postpone_pick_button"
            style="@style/ReeceButtonBottomSheetDialog"
            android:layout_below="@id/back_order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/postpone_pick" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
